style: prevent horizontal overflow by setting 100% width on the document

--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,24 @@
-html, body {
+*, *::after,*::before {
+  box-sizing: border-box;
+}
+
+html {
+  width: 100%;
+  height: 100vh;
+}
+
+body {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-  width: 100vw;
   background-image: url("./img/bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-color: #ffffff61;
   background-blend-mode: soft-light;
   color: #37363A;
+  margin: 2em;
 }
 
 .box {
@@ -43,8 +51,8 @@ html, body {
 .snake {
   background: green;
   border-radius: 50%;
-  width: 83%;
-  height: 95%;
+  width: 98%;
+  height: 100%;
 }
 
 .square {
